Changed global setting for back/foreground color

--- a/index.html
+++ b/index.html
@@ -4,3 +4,8 @@ title: Portfolio
 description: This is my personal website. Welcome.
 keywords: design, portfolio, development, designer
 ---
+
+<div class="row">
+  <h1>Hello</h1>
+</div>
+  
