Updated oval generation without using svg

--- a/index.html
+++ b/index.html
@@ -11,25 +11,12 @@ keywords: design, portfolio, development, designer
   </div>
   <div class="row">
     <div style="margin-top: -18px" class="large-8 small-6">
-      <svg width="168px" height="36px" viewBox="0 0 168 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <!-- Generator: Sketch 46 (44423) - http://www.bohemiancoding.com/sketch -->
-      <desc>Created with Sketch.</desc>
-      <defs>
-          <path d="M18,36 C8.0588745,36 0,27.9411255 0,18 C0,8.0588745 8.0588745,0 18,0 C27.9411255,0 36,8.0588745 36,18 C36,27.9411255 27.9411255,36 18,36 Z M62,36 C52.0588745,36 44,27.9411255 44,18 C44,8.0588745 52.0588745,0 62,0 C71.9411255,0 80,8.0588745 80,18 C80,27.9411255 71.9411255,36 62,36 Z M106,36 C96.0588745,36 88,27.9411255 88,18 C88,8.0588745 96.0588745,0 106,0 C115.941125,0 124,8.0588745 124,18 C124,27.9411255 115.941125,36 106,36 Z M150,36 C140.058875,36 132,27.9411255 132,18 C132,8.0588745 140.058875,0 150,0 C159.941125,0 168,8.0588745 168,18 C168,27.9411255 159.941125,36 150,36 Z" id="path-1"></path>
-      </defs>
-      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <g id="Artboard" transform="translate(-211.000000, -156.000000)">
-              <g id="Group-6" transform="translate(211.000000, 120.000000)">
-                  <g id="Group-2" transform="translate(0.000000, 36.000000)">
-                      <g id="Combined-Shape">
-                          <use fill="#333333" fill-rule="evenodd" xlink:href="#path-1"></use>
-                          <path stroke="#FFFFFF" stroke-width="10" d="M18,31 C25.1797017,31 31,25.1797017 31,18 C31,10.8202983 25.1797017,5 18,5 C10.8202983,5 5,10.8202983 5,18 C5,25.1797017 10.8202983,31 18,31 Z M62,31 C69.1797017,31 75,25.1797017 75,18 C75,10.8202983 69.1797017,5 62,5 C54.8202983,5 49,10.8202983 49,18 C49,25.1797017 54.8202983,31 62,31 Z M106,31 C113.179702,31 119,25.1797017 119,18 C119,10.8202983 113.179702,5 106,5 C98.8202983,5 93,10.8202983 93,18 C93,25.1797017 98.8202983,31 106,31 Z M150,31 C157.179702,31 163,25.1797017 163,18 C163,10.8202983 157.179702,5 150,5 C142.820298,5 137,10.8202983 137,18 C137,25.1797017 142.820298,31 150,31 Z"></path>
-                      </g>
-                  </g>
-              </g>
-          </g>
-      </g>
-</svg>
+      <ul class="horizontal-list">
+        <li class="oval"></li>
+        <li class="oval"></li>
+        <li class="oval"></li>
+        <li class="oval"></li>
+      </ul>
     </div>
     <div class="large-4 small-6">
 
