Changed to light theme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ keywords: design, portfolio, development, designer
     <hr/>
   </div>
   <div class="row">
-    <div style="margin-top: -18px" class="large-8 small-8">
+    <div style="margin-top: -18px" class="large-8 small-8 columns">
       <ul class="horizontal-list">
         <li class="oval"></li>
         <li class="oval"></li>
@@ -18,8 +18,8 @@ keywords: design, portfolio, development, designer
         <li class="oval"></li>
       </ul>
     </div>
-    <div class="large-4 small-4">
-
+    <div style="margin-top: -16px" class="large-4 small-4 columns">
+      {% include nav.html %}
     </div>
   </div>
 </section>
