Fixed divider coming over ovals issue

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ keywords: design, portfolio, development, designer
   <div class="row expanded header divider">
     <hr/>
   </div>
-  <div class="row">
-    <div style="margin-top: -18px" class="large-8 small-8 columns">
+  <div class="row overlay-up">
+    <div class="large-8 small-8 columns">
       <ul class="horizontal-list">
         <li class="oval"></li>
         <li class="oval"></li>
@@ -18,7 +18,7 @@ keywords: design, portfolio, development, designer
         <li class="oval"></li>
       </ul>
     </div>
-    <div style="margin-top: -16px" class="large-4 small-4 columns">
+    <div class="large-4 small-4 columns">
       {% include nav.html %}
     </div>
   </div>
