Updated default layout

--- a/index.html
+++ b/index.html
@@ -1,26 +1,8 @@
 ---
 layout: default
-title: Portfolio
+title: Home
 description: This is my personal website. Welcome.
 keywords: design, portfolio, development, designer
 ---
 
-<section role="main">
-  <div class="row expanded header divider">
-    <hr/>
-  </div>
-  <div class="row overlay-up">
-    <div class="large-8 small-8 columns">
-      <ul class="horizontal-list">
-        <li class="oval"></li>
-        <li class="oval"></li>
-        <li class="oval"></li>
-        <li class="oval"></li>
-      </ul>
-    </div>
-    <div class="large-4 small-4 columns">
-      {% include nav.html %}
-    </div>
-  </div>
-</section>
   
