Added hero title

--- a/index.html
+++ b/index.html
@@ -5,4 +5,11 @@ description: This is my personal website. Welcome.
 keywords: design, portfolio, development, designer
 ---
 
-  
+<section role="main">
+  <div class="row hero-row">
+    <div class="large-8 small-12 columns">
+      <div class="horizontal-bar"></div>
+      <h1 class="hero-title font-medium">Design + Make</h1>
+    </div>
+  </div>
+</section>
