--- a/index.html
+++ b/index.html
@@ -12,4 +12,9 @@ keywords: design, portfolio, development, designer
       <h1 class="hero-title font-medium">Design + Make</h1>
     </div>
   </div>
+  <div class="row">
+    <div class="large-6 medium-10 small-12 columns">
+      <p class="hero-text">Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
+    </div>
+  </div>
 </section>
