Added action bar at home page

--- a/index.html
+++ b/index.html
@@ -17,4 +17,26 @@ keywords: design, portfolio, development, designer
       <p class="hero-text">Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
     </div>
   </div>
+  <div class="row">
+    <div class="large-12 medium-12 small-12 columns">
+      <div class="hero-action">
+        <div class="large-8 large-centered columns">
+          <ul class="horizontal-list action-list text-center">
+            <li>
+              <a href="">/Selected Works</a>
+            </li>
+            <li>
+              <a href="">/Blog</a>
+            </li>
+            <li>
+              <a href="">/The Design Room</a>
+            </li>
+            <li>
+              <a href="">/The Garage</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
