--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ keywords: design, portfolio, development, designer
   <div class="row">
     <div class="large-12 medium-12 small-12 columns">
       <div class="hero-action">
-        <div class="large-8 large-centered columns">
+        <div class="large-8 small-12 large-centered columns">
           <ul class="horizontal-list action-list text-center">
             <li>
               <a href="">/Selected Works</a>
