Added frame grid for Portfolio

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: About
 description: This is my personal website. Welcome.
 permalink: '/about/'
 keywords: design, portfolio, development, designer
