--- a/index.html
+++ b/index.html
@@ -39,4 +39,26 @@ keywords: design, portfolio, development, designer
       </div>
     </div>
   </div>
+  <section id="selected-works">
+    <div class="row" style="margin-top: 12rem;">
+      <div class="column">
+        <h6 class="text-center font-medium">SELECTED WORKS</h6>
+        <div style="width: 151px;" class="section-heading-bar"></div>
+      </div>
+    </div>
+    <div class="row expanded">
+      <div class="section-portfolio-background">
+        <div class="row">
+          <div class="large-8 small-12 columns">
+            <div class="portfolio-project-card">
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="portfolio-project-card">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </section>
