Updated portfolio section with happy people

--- a/index.html
+++ b/index.html
@@ -49,13 +49,43 @@ keywords: design, portfolio, development, designer
     <div class="row expanded">
       <div class="section-portfolio-background">
         <div class="row">
-          <div class="large-8 small-12 columns">
+          <div class="large-8 medium-8 small-12 columns">
             <div class="portfolio-project-card">
             </div>
           </div>
-          <div class="large-4 columns">
+          <div class="large-4 medium-4 columns">
             <div class="portfolio-project-card">
             </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-4 medium-4 small-12 columns">
+            <div class="portfolio-project-card">
+            </div>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <div class="portfolio-project-card">
+            </div>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <div class="portfolio-project-card">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">
+            <div class="portfolio-project-card">
+            </div>
+          </div>
+        </div>
+        <div class="row" style="position:relative; top: -6rem;">
+          <div class="large-6 medium-6 small-12 columns">
+            <h6 class="medium-heading font-bold">HAPPY. PEOPLE</h6>
+            <p style="margin-top: 3rem; margin-bottom: 5rem;">I have designed &amp; built a variety of products which have been downloaded more than 4 Million times. These products have an average rating of 4+ stars.<br><br>My work has also received several noteworthy mentions on various internet media such as Gizmodo, Microsoft, Nokia and others.</p>
+            <a class="custom-action-button font-medium">DOWNLOAD APPS</a>
+          </div>
+          <div class="large-3 medium-3 columns sidebar">
+            
           </div>
         </div>
       </div>
