--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ keywords: design, portfolio, development, designer
     <div class="row" style="margin-top: 12rem;">
       <div class="column">
         <h6 class="text-center font-medium">SELECTED WORKS</h6>
-        <div style="width: 151px;" class="section-heading-bar"></div>
+        <div style="width: 151px;" class="section-heading-bar-light"></div>
       </div>
     </div>
     <div class="row expanded">
@@ -87,6 +87,26 @@ keywords: design, portfolio, development, designer
           <div class="large-3 medium-3 columns sidebar">
             
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="room">
+    <div class="row expanded">
+      <div class="section-room-background">
+        <div class="row">
+          <div class="column">
+            <h6 class="text-center font-medium font-dark-theme">THE DESIGN ROOM</h6>
+            <div style="width: 162px;" class="section-heading-bar-dark"></div>
+          </div>
+        </div>
+        <div class="row" style="margin-top: 3rem; margin-bottom: 6rem;">
+          <div class="large-5 medium-8 small-12 large-centered medium-centered small-centered column">
+            <p class="text-justify font-dark-theme">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. </p>
+          </div>
+        </div>
+        <div class="row expanded">
+          <img class="center-image" src="/assets/images/the-room-hero.png"></img>
         </div>
       </div>
     </div>
