Added explore button in the design room section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row expanded">
           <img class="center-image" src="/assets/images/the-room-hero.png"></img>
+          <a class="custom-action-button font-medium center-align" style="margin-top:6rem; width:160px; background:white; color:black;">EXPLORE MORE</a>
         </div>
       </div>
     </div>
