Added a section for blog

--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@ keywords: design, portfolio, development, designer
       </div>
     </div>
   </section>
+  <section id="blog">
+    <div class="row expanded">
+      <div class="row" style="margin-top: 8rem;">
+          <div class="column">
+            <h6 class="text-center font-medium">BLOG</h6>
+            <div style="width: 57px;" class="section-heading-bar-light"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-9 middle-6 small-12 column divider" style="margin-top: 6rem; padding-right:20px;">
+            <hr/>
+            <h4 class="font-bold" style="margin-bottom:4px;">The Power of Side Projects</h4>
+            <h6 class="medium-heading font-bold">LATEST ARTICLE</h6>
+            <div style="height:360px; width:100%; margin-top:20px; margin-right: 20px; background: #ededed;">
+               <img class="blog-hero-image" src="https://images.unsplash.com/photo-1475092980020-2094a10518d2"></img> 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="room">
     <div class="row expanded">
       <div class="section-room-background">
