--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@ keywords: design, portfolio, development, designer
             <hr/>
             <h4 class="font-bold" style="margin-bottom:4px;">The Power of Side Projects</h4>
             <h6 class="medium-heading font-bold">LATEST ARTICLE</h6>
-            <div style="height:360px; width:100%; margin-top:20px; margin-right: 20px; background: #ededed;">
-               <img class="blog-hero-image" src="https://images.unsplash.com/photo-1475092980020-2094a10518d2"></img> 
+            <div id="blog-home-container">
+               <img class="blog-home-image" src="https://images.unsplash.com/photo-1496149350006-aa0664f0c9be"></img>
+               <div class="overlay"></div>
             </div>
           </div>
         </div>
