Updated hero article link

--- a/index.html
+++ b/index.html
@@ -100,15 +100,17 @@ keywords: design, portfolio, development, designer
           </div>
         </div>
         <div class="row">
-          <div class="large-9 middle-6 small-12 column divider" style="margin-top: 6rem; padding-right:20px;">
-            <hr/>
-            <h4 class="font-bold" style="margin-bottom:4px;">The Power of Side Projects</h4>
-            <h6 class="medium-heading font-bold">LATEST ARTICLE</h6>
-            <div id="blog-home-container">
-               <img class="blog-home-image" src="https://images.unsplash.com/photo-1496149350006-aa0664f0c9be"></img>
-               <div class="overlay"></div>
+          <a href="https://medium.com/@AnaghSharma/the-power-of-side-projects-e6ba20826f69">
+            <div class="large-9 middle-6 small-12 column divider" style="margin-top: 6rem; padding-right:20px;">
+              <hr/>
+              <h4 class="font-bold" style="margin-bottom:4px;">The Power of Side Projects</h4>
+              <h6 class="medium-heading font-bold">LATEST ARTICLE</h6>
+              <div id="blog-home-container">
+                <img class="blog-home-image" src="https://images.unsplash.com/photo-1496149350006-aa0664f0c9be"></img>
+                <div class="overlay"></div>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
