Updated the design room text

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row" style="margin-top: 3rem; margin-bottom: 6rem;">
           <div class="large-5 medium-8 small-12 large-centered medium-centered small-centered column">
-            <p class="text-justify font-dark-theme">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. </p>
+            <p class="text-justify font-dark-theme">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="" target="_blank" class="font-dark-theme"><strong>Instagram</strong></a> lately and have been looking to improve this project since then.</p>
           </div>
         </div>
         <div class="row expanded">
