--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ keywords: design, portfolio, development, designer
           <div class="large-6 medium-6 small-12 columns">
             <h6 class="medium-heading font-bold">HAPPY. PEOPLE</h6>
             <p style="margin-top: 3rem; margin-bottom: 5rem;">I have designed &amp; built a variety of products which have been downloaded more than 4 Million times. These products have an average rating of 4+ stars.<br><br>My work has also received several noteworthy mentions on various internet media such as Gizmodo, Microsoft, Nokia and others.</p>
-            <a class="custom-action-button font-medium">DOWNLOAD APPS</a>
+            <a class="action-button font-medium">DOWNLOAD APPS</a>
           </div>
           <div class="large-3 medium-3 columns sidebar">
             
@@ -124,14 +124,14 @@ keywords: design, portfolio, development, designer
             <div style="width: 162px;" class="section-heading-bar-dark"></div>
           </div>
         </div>
-        <div class="row" style="margin-top: 3rem; margin-bottom: 6rem;">
+        <div class="row" style="margin-top: 3rem;">
           <div class="large-5 medium-8 small-12 large-centered medium-centered small-centered column">
-            <p class="text-justify font-dark-theme">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="" target="_blank" class="font-dark-theme"><strong>Instagram</strong></a> lately and have been looking to improve this project since then.</p>
+            <p class="text-justify font-dark-theme">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-dark-theme"><strong>Instagram</strong></a> lately and have been looking to improve this project since then.</p>
           </div>
         </div>
         <div class="row expanded">
           <img class="center-image" src="/assets/images/the-room-hero.png"></img>
-          <a class="custom-action-button font-medium center-align" style="margin-top:6rem; width:160px; background:white; color:black;">EXPLORE MORE</a>
+          <a class="action-button-light font-medium center-align" style="width:152px;">EXPLORE MORE</a>
         </div>
       </div>
     </div>
