Updated hero list style

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@ keywords: design, portfolio, development, designer
     </div>
   </div>
   <div class="row">
-    <div class="large-12 medium-12 small-12 columns">
-      <div class="hero-action">
-        <div class="large-8 small-12 large-centered columns">
+    <div class="columns">
+      <div class="hero-action center-element">
           <ul class="horizontal-list action-list text-center">
             <li>
               <a href="">/Selected Works</a>
@@ -35,13 +34,12 @@ keywords: design, portfolio, development, designer
               <a href="">/The Garage</a>
             </li>
           </ul>
-        </div>
       </div>
     </div>
   </div>
   <section id="selected-works">
     <div class="row" style="margin-top: 12rem;">
-      <div class="column">
+      <div class="columns">
         <h6 class="text-center font-medium">SELECTED WORKS</h6>
         <div style="width: 151px;" class="section-heading-bar-light"></div>
       </div>
@@ -73,7 +71,7 @@ keywords: design, portfolio, development, designer
           </div>
         </div>
         <div class="row">
-          <div class="column">
+          <div class="columns">
             <div class="portfolio-project-card">
             </div>
           </div>
@@ -94,14 +92,14 @@ keywords: design, portfolio, development, designer
   <section id="blog">
     <div class="row expanded">
       <div class="row" style="margin-top: 8rem;">
-          <div class="column">
+          <div class="columns">
             <h6 class="text-center font-medium">BLOG</h6>
             <div style="width: 57px;" class="section-heading-bar-light"></div>
           </div>
         </div>
         <div class="row">
           <a href="https://medium.com/@AnaghSharma/the-power-of-side-projects-e6ba20826f69">
-            <div class="large-9 middle-6 small-12 column divider" style="margin-top: 6rem; padding-right:20px;">
+            <div class="large-9 middle-6 small-12 columns divider" style="margin-top: 6rem; padding-right:20px;">
               <hr/>
               <h4 class="font-bold" style="margin-bottom:4px;">The Power of Side Projects</h4>
               <h6 class="medium-heading font-bold">LATEST ARTICLE</h6>
@@ -130,7 +128,7 @@ keywords: design, portfolio, development, designer
           </div>
         </div>
         <div class="row expanded">
-          <img class="center-image" src="/assets/images/the-room-hero.png"></img>
+          <img class="center-element" src="/assets/images/the-room-hero.png"></img>
           <a class="action-button-light font-medium center-align" style="width:152px;">EXPLORE MORE</a>
         </div>
       </div>
