--- a/index.html
+++ b/index.html
@@ -48,34 +48,32 @@ keywords: design, portfolio, development, designer
       <div class="section-portfolio-background">
         <div class="row">
           <div class="large-8 medium-8 small-12 columns">
-            <div class="portfolio-project-card">
+            <div class="row">
+              <div class="portfolio-project-card horizontal-rect-8">
+              </div>
+            </div>
+            <div class="row">
+              <div class="large-6 medium-6 small-12 columns left-collapse">
+                <div class="portfolio-project-card square">
+                </div>
+              </div>
+              <div class="large-6 medium-6 columns right-collapse">
+                <div class="portfolio-project-card square">
+                </div>
+              </div>
             </div>
           </div>
           <div class="large-4 medium-4 columns">
-            <div class="portfolio-project-card">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 small-12 columns">
-            <div class="portfolio-project-card">
-            </div>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <div class="portfolio-project-card">
-            </div>
-          </div>
-          <div class="large-4 medium-4 columns">
-            <div class="portfolio-project-card">
+            <div class="portfolio-project-card vertical-rect">
             </div>
           </div>
         </div>
         <div class="row">
           <div class="columns">
-            <div class="portfolio-project-card">
+            <div class="portfolio-project-card horizontal-rect-12">
             </div>
           </div>
-        </div>
+        </div> 
         <div class="row" style="position:relative; top: -6rem;">
           <div class="large-6 medium-6 small-12 columns">
             <h6 class="medium-heading font-bold">HAPPY. PEOPLE</h6>
