Added icons to action bar list

--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@ keywords: design, portfolio, development, designer
       <div class="hero-action center-element">
           <ul class="horizontal-list action-list text-center">
             <li>
+              <img src="/assets/icons/selected-works.svg"/>
               <a href="">/Selected Works</a>
             </li>
             <li>
+              <img src="/assets/icons/blog.svg"/>
               <a href="">/Blog</a>
             </li>
             <li>
+              <img src="/assets/icons/the-design-room.svg"/>
               <a href="">/The Design Room</a>
             </li>
             <li>
+              <img src="/assets/icons/the-makers-garage.svg"/>
               <a href="">/The Garage</a>
             </li>
           </ul>
