Updated code to use float center

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ keywords: design, portfolio, development, designer
   </div>
   <div class="row">
     <div class="columns">
-      <div class="hero-action center-element">
+      <div class="hero-action float-center">
           <ul class="horizontal-list action-list text-center">
             <li>
               <img src="/assets/icons/selected-works.svg"/>
@@ -116,12 +116,12 @@ keywords: design, portfolio, development, designer
           </div>
         </div>
         <div class="row" style="margin-top: 6rem;">
-          <div class="large-9 medium-8 small-12 columns divider" style="padding-right: 1rem;">
+          <div class="large-9 medium-8 small-12 columns divider no-hyperlink" style="padding-right: 1rem;">
             <a href="https://medium.com/@AnaghSharma/the-power-of-side-projects-e6ba20826f69">
               <hr/>
               <h4 class="font-bold" style="margin-bottom:4px;">The Power of Side Projects</h4>
               <h6 class="medium-heading font-bold">LATEST ARTICLE</h6>
-              <div id="blog-home-container">
+              <div class="blog-home-container">
                 <img class="blog-home-image" src="https://images.unsplash.com/photo-1496149350006-aa0664f0c9be"></img>
                 <div class="overlay"></div>
               </div>  
@@ -159,7 +159,7 @@ keywords: design, portfolio, development, designer
           </div>
         </div>
         <div class="row expanded">
-          <img class="center-element" src="/assets/images/the-room-hero.png"></img>
+          <img class="float-center" src="/assets/images/the-room-hero.png"></img>
           <a class="action-button-light font-medium center-align" style="width:152px;">EXPLORE MORE</a>
         </div>
       </div>
