--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ keywords: design, portfolio, development, designer
     <h1 class="font-light">Design <span class="font-primary-color">+</span> Make</h1>
   </div>
 </div>
-<div class="row hero-text">
+<div class="row">
   <div class="large-6 medium-10 small-12 columns">
     <p>Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
-    <a href="{{ site.url }}/about" class="font-medium font-primary-color">KNOW MORE ABOUT ME</a>
+    <a href="{{ site.url }}/about" class="button-link font-medium text-primary-color">KNOW MORE ABOUT ME</a>
   </div>
 </div>
