--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ keywords: design, portfolio, development, designer
 <div class="row">
   <div class="large-6 medium-10 small-12 columns">
     <p>Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
-    <a href="{{ site.url }}/about" class="button-link font-medium text-primary-color">KNOW MORE ABOUT ME</a>
+    <a href="{{ site.url }}/about" class="primary quiet font-medium text-primary-color">KNOW MORE ABOUT ME</a>
   </div>
 </div>
