Added spacing and typography classes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ keywords: design, portfolio, development, designer
     <h1 class="font-light">Design <span class="font-primary-color">+</span> Make</h1>
   </div>
 </div>
-<div class="row" style="margin-top: 6rem">
+<div class="row mt6">
   <div class="large-6 medium-10 small-12 columns">
     <p>Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
-    <a href="{{ site.url }}/about" class="primary quiet font-medium text-primary-color">KNOW MORE ABOUT ME</a>
+    <a href="{{ site.url }}/about" class="primary quiet font-medium font-primary-color">KNOW MORE ABOUT ME</a>
   </div>
 </div>
 <section id="selected-works" style="margin-top:8rem;">
