Update hero title and text

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@ description: This is my personal website. Welcome.
 keywords: design, portfolio, development, designer
 ---
 
-<div class="row hero-row">
-  <div class="large-8 small-12 columns">
+<div class="row hero-row mt6">
+  <div class="large-8 small-12 columns mt5">
     <div class="horizontal-bar"></div>
     <h1 class="font-light">Design <span class="font-primary-color">+</span> Make</h1>
   </div>
 </div>
-<div class="row mt6">
-  <div class="large-6 medium-10 small-12 columns">
-    <p>Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
+<div class="row mt5">
+  <div class="large-6 medium-10 small-12 columns mt4">
+    <p class="mb5">Hello,<br><br>I am <b>Anagh Sharma</b> - a Digital Product Designer from New Delhi, India.&nbsp;I design and build digital products people love to use.</p>
     <a href="{{ site.url }}/about" class="primary quiet font-medium font-primary-color">KNOW MORE ABOUT ME</a>
   </div>
 </div>
-<section id="selected-works" style="margin-top:8rem;">
+<section class="mt6">
     <div class="row expanded">
       <div class="section-portfolio-background">
         <div class="row">
