Fixed portfolio grid in mobile

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@ keywords: design, portfolio, development, designer
 </div>
 <section class="mt6">
     <div class="row expanded mt5">
-      <div class="section-portfolio-background mt7 mb5">
+      <div class="section-portfolio-background mt7">
         <div class="row">
-          <div class="large-8 medium-8 small-12 columns pl0 pr0">
+          <div class="large-8 medium-8 small-12 columns left-collapse right-collapse">
             <div class="row">
               <div class="portfolio-project-card horizontal-rect-8 mb2">
               </div>
             </div>
             <div class="row">
-              <div class="large-6 medium-6 small-12 columns pl0">
+              <div class="large-6 medium-6 small-12 columns left-collapse">
                 <div class="portfolio-project-card square mb2">
                 </div>
               </div>
-              <div class="large-6 medium-6 columns pr0">
+              <div class="large-6 medium-6 columns right-collapse">
                 <div class="portfolio-project-card square mb2">
                 </div>
               </div>
             </div>
           </div>
-          <div class="large-4 medium-4 columns">
+          <div class="large-4 medium-4 columns small-collapse">
             <div class="portfolio-project-card vertical-rect mb2">
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="columns">
+          <div class="columns small-collapse">
             <div class="portfolio-project-card horizontal-rect-12 mb2">
             </div>
           </div>
