Updated download apps section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ keywords: design, portfolio, development, designer
 </div>
 <section class="mt6">
     <div class="row expanded mt5">
-      <div class="section-portfolio-background mt7">
+      <div class="section-portfolio-background mt7 pb4">
         <div class="row">
           <div class="large-8 medium-8 small-12 columns left-collapse right-collapse">
             <div class="row">
@@ -48,10 +48,10 @@ keywords: design, portfolio, development, designer
             </div>
           </div>
         </div> 
-        <div class="row" style="position:relative; top: -6rem;">
+        <div class="row pb5">
           <div class="large-6 medium-6 small-12 columns">
-            <h6 class="medium-heading font-bold">HAPPY. PEOPLE</h6>
-            <p class="font-dark" style="margin-top: 3rem; margin-bottom: 5rem;">I have designed &amp; built a variety of products which have been downloaded more than 4 Million times. These products have an average rating of 4+ stars.<br><br>My work has also received several noteworthy mentions on various internet media such as Gizmodo, Microsoft, Nokia and others.</p>
+            <h6 class="font-dark font-bold font-secondary quiet">HAPPY. PEOPLE</h6>
+            <p class="font-dark mt5" style="margin-bottom: 6rem;">I have designed &amp; built a variety of products which have been downloaded more than 4 Million times. These products have an average rating of 4+ stars.<br><br>My work has also received several noteworthy mentions on various internet media such as Gizmodo, Microsoft, Nokia and others.</p>
             <a class="action-button font-medium">DOWNLOAD APPS</a>
           </div>
           <div class="large-3 medium-4 columns sidebar">
