--- a/index.html
+++ b/index.html
@@ -75,3 +75,20 @@ keywords: design, portfolio, development, designer
       </div>
     </div>
   </section>
+  <section id="blog">
+    <div class="row mt6">
+      <h6 class="text-center font-medium">BLOG</h6>
+      <div style="width: 57px;" class="section-heading-bar-dark"></div>
+    </div>
+    <div class="row mt5">
+      <div class="large-9 middle-6 small-12 columns divider pr3">
+        <hr class="font-secondary"/>
+        <h6 class="f6 font-medium font-secondary mt4 mb0">LATEST ARTICLE / READ TIME - 7m 25s</h6>
+        <a href="https://medium.com/@AnaghSharma/the-power-of-side-projects-e6ba20826f69" class="heading f2 font-bold">The Power of Side Projects</a>
+        <div class="mt5 mb3">
+          <h6 class="f6 font-medium font-secondary" style="display: inline;">OTHER ARTICLES</h6>
+          <a href="" class="font-primary-color f6 font-medium ml2" style="vertical-align: center;">SEE ALL</a>
+        </div>
+      </div>
+    </div>
+  </section>
