Updated blog card

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ keywords: design, portfolio, development, designer
           <div class="large-4 medium-4 columns mt1">
             <a href="https://medium.com/@AnaghSharma/from-the-pen-of-an-insecure-designer-5709e2a2254f" class="primary no-decoration-light">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold">From the pen of an insecure Designer (?)</h5>
+                <h5 class="f4 mh3 font-secondary-bold lh-title">From the pen of an insecure Designer (?)</h5>
                 <h6 class="f6 mh3 font-medium font-secondary">OCTOBER 13, 2016<br>READ TIME - 2m 34s</h6>
               </div>
             </a>
@@ -101,7 +101,7 @@ keywords: design, portfolio, development, designer
           <div class="large-4 medium-4 columns mt1">
             <a href="https://medium.com/@AnaghSharma/journey-from-idea-to-users-a-behance-app-e9ddeeeb2239" class="primary no-decoration-light">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold">Journey from idea to users — A Behance app</h5>
+                <h5 class="f4 mh3 font-secondary-bold lh-title">Journey from idea to users — A Behance app</h5>
                 <h6 class="f6 mh3 font-medium font-secondary">DECEMBER 09, 2015<br>READ TIME - 6m 03s</h6>
               </div>
             </a>
@@ -109,7 +109,7 @@ keywords: design, portfolio, development, designer
           <div class="large-4 medium-4 columns mt1">
             <a href="https://medium.com/@AnaghSharma/from-the-pen-of-an-insecure-designer-5709e2a2254f" class="primary no-decoration-light hide">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold">From the pen of an insecure Designer (?)</h5>
+                <h5 class="f4 mh3 font-secondary-bold lh-title">From the pen of an insecure Designer (?)</h5>
                 <h6 class="f6 mh3 font-medium font-secondary">OCTOBER 13, 2016<br>READ TIME - 2m 34s</h6>
               </div>
             </a>
