--- a/index.html
+++ b/index.html
@@ -121,3 +121,22 @@ keywords: design, portfolio, development, designer
       </div>
     </div>
   </section>
+  <section id="thedesignroom">
+    <div class="row expanded">
+      <div class="room-background pv6">
+        <div class="row">
+          <h6 class="text-center font-medium">THE DESIGN ROOM</h6>
+          <div style="width: 157px;" class="section-heading-bar-dark"></div>
+        </div>
+        <div class="row mt6">
+          <div class="large-4 medium-4 columns mt3">
+            <img src="/assets/images/the-room-hero.svg"></img>
+          </div>
+          <div class="large-6 large-offset-1 end medium-8 columns mt3">
+            <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color">Instagram</a> lately and have been looking to improve this project since then.</p>
+            <a href="" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
