Added the garage header

--- a/index.html
+++ b/index.html
@@ -140,3 +140,9 @@ keywords: design, portfolio, development, designer
       </div>
     </div>
   </section>
+  <section id="thegarage">
+    <div class="row mt6">
+      <h6 class="text-center font-medium">THE GARAGE</h6>
+      <div style="width: 113px;" class="section-heading-bar-dark"></div>
+    </div>
+  </section>
