Added posts to the garage section

--- a/index.html
+++ b/index.html
@@ -154,4 +154,24 @@ keywords: design, portfolio, development, designer
         </div>
       </div>
     </div>
+    <div class="row mt5 pb5">
+      <div class="large-4 medium-4 columns">
+        <a href="" class="heading">
+          <hr class="font-secondary"/>
+          <p class="garage-post-header lh-title pr4">Building a native macOS Lyrics app</p>
+        </a>
+      </div>
+      <div class="large-4 medium-4 columns">
+        <a href="" class="heading">
+          <hr class="font-secondary"/>
+          <p class="garage-post-header lh-title pr4">Switching to Jekyll and Github Pages for my personal website</p>
+        </a>
+      </div>
+      <div class="large-4 medium-4 columns">
+        <a href="" class="heading">
+          <hr class="font-secondary"/>
+          <p class="garage-post-header lh-title pr4">Building a macOS menu bar app with Xamarin and C#</p>
+        </a>
+      </div>
+    </div>
   </section>
