Updated layout of the garage section

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@ keywords: design, portfolio, development, designer
       <h6 class="text-center font-medium">THE GARAGE</h6>
       <div style="width: 113px;" class="section-heading-bar-dark"></div>
     </div>
-    <div class="row mt7">
-      <div class="large-8 large-offset-2 medium-8 medium-offset-2 columns">
-        <div class="room-background garage-spacing pt6 pb5">
-          <img class="ph3 float-center" style="margin-top: -17rem;" src="/assets/images/the-garage-hero.svg"/>
-          <p class="text-center text-justify mt5">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
-          <a href="" class="primary quiet font-medium font-primary-color float-center mt6" style="width: 160px;">EXPLORE THE PROJECT</a>
-        </div>
+    <div class="row garage-background mt6">
+      <div class="large-7 medium-8 columns pl4 pr4 pv4">
+        <p class="text-justify pb3">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
+        <a href="" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
+      </div>
+      <div class="large-3 medium-4 columns pv5">
+        <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
       </div>
     </div>
     <div class="row mt5 pb5">
