Updated margins and paddings in the garage section

--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@ keywords: design, portfolio, development, designer
       <div style="width: 113px;" class="section-heading-bar-dark"></div>
     </div>
     <div class="row garage-background mt6">
-      <div class="large-7 medium-8 columns pl4 pr4 pv4">
-        <p class="text-justify pb3">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
+      <div class="large-7 medium-8 columns ph4 pv4">
+        <p class="text-justify mt3 pb4">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
         <a href="" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
       </div>
-      <div class="large-3 medium-4 columns pv5">
-        <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
+      <div class="large-3 medium-4 columns">
+        <img class="float-center mt5 pb5" src="/assets/images/the-garage-hero.svg"></img>
       </div>
     </div>
     <div class="row mt5 pb5">
