Updated display picture in about section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ keywords: design, portfolio, development, designer
         </a>
       </div>
       <div class="large-4 medium-4 columns">
-        <a href="" class="heading">
+        <a href="https://github.com/AnaghSharma/Ambar" class="heading">
           <hr class="font-secondary"/>
           <p class="garage-post-header lh-title pr4">Building a macOS menu bar app with Xamarin and C#</p>
         </a>
