--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,15 +9,15 @@ keywords: design, portfolio, development, designer
 <div class="row hero-row mt6">
   <div class="large-8 small-12 columns mt5">
     <div class="horizontal-bar"></div>
-    <h1 class="font-light">An<span class="font-primary-color">a</span>gh Sharma</h1>
+    <h1 class="font-light">hell<span class="font-primary-color">o</span></h1>
   </div>
 </div>
 <div class="row mt6 mb6">
   <div class="row">
-    <div class="large-4 medium-4 columns">
-
+    <div class="large-4 medium-4 columns display-pic">
+      <img src="/assets/images/display-picture.jpg"/>
     </div>
-    <div class="large-8 medium-8 columns">
+    <div class="large-7 medium-8 columns ph3">
       <p class="hero-text text-justify">I am <b>Anagh Sharma</b>, a Designer and Creative born and currently based in New Delhi, India. I have been doing <b>Digital Product Design</b> from last couple of years. Since then I have successfully built and published several apps and websites.<br><br>I have experience and expertise in Mobile App Design, Desktop app design and Website design starting from sketches, Information Architecture, Navigation Flows, Wireframing, Prototyping, etc. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>Having a background in Computer Science &amp; Engineering helps me to understand the technical and time constraints of a project. When I was 13, parents bought me a computer, a brand new machine with Windows XP. I was awestruck with it. I used "Paint" program a lot and got inspired by the fact that what a software can do. Since then I aspired to build software.<br><br>In the past, I have worked with Snapdeal, one of India's largest e-commerce websites. In the future, I am looking forward to work on challenging products. </p>
     </div>
   </div>
