Added thumbnail image for uber project

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
           <div class="columns small-collapse">
-            <div class="portfolio-project-card horizontal-rect-12 mb2">
+            <div class="portfolio-project-card horizontal-rect-12 uber-thumbnail mb2">
             </div>
           </div>
         </div> 
