Set up the project detail page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@ keywords: design, portfolio, development, designer
 </div>
 <section class="mt6">
     <div class="row expanded mt5">
-      <div class="section-portfolio-background mt7 pb4">
+      <div class="full-width-background-light mt7 pb4">
         <div class="row">
           <div class="large-8 medium-8 small-12 columns left-collapse right-collapse">
             <div class="row">
-              <div class="portfolio-project-card horizontal-rect-8 identity-thumbnail mb2">
-              </div>
+              <a href="{{ site.url }}/projects/identity" class="heading">
+                <div class="portfolio-project-card horizontal-rect-8 identity-thumbnail mb2">
+                </div>
+              </a>
             </div>
             <div class="row">
               <div class="large-6 medium-6 small-12 columns left-collapse">
@@ -123,7 +125,7 @@ keywords: design, portfolio, development, designer
   </section>
   <section id="thedesignroom">
     <div class="row expanded">
-      <div class="room-background pv6">
+      <div class="full-width-background-dark pv6">
         <div class="row">
           <h6 class="text-center font-medium">THE DESIGN ROOM</h6>
           <div style="width: 157px;" class="section-heading-bar-dark"></div>
