--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -18,7 +18,7 @@ keywords: design, portfolio, development, designer
         <div class="row">
           <div class="columns">
             <a class="heading disabled">
-              <div class="portfolio-project-card horizontal-rect-12 mb2">
+              <div class="portfolio-project-card horizontal-rect-12 identity-hero mb2">
               </div>
             </a>
           </div>
@@ -28,13 +28,16 @@ keywords: design, portfolio, development, designer
                 <div class="content-table-bar" style="display: inline-block; height: 8rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
-                    <li class="pv1 font-dark">Why</li>
+                    <li class="pv1 font-dark">When</li>
                     <li class="pv1 font-dark">Research</li>
                     <li class="pv1 font-dark">How</li>
                 </ul>
             </div>
-            <div class="large-9 medium-9 columns">
-                <p class="text-justify font-dark"> The text goes here.</p>
+            <div class="large-7 medium-7 end columns">
+                <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
+                <p class="text-justify font-dark lh-copy mt4">I studied Engineering but ended up working as a Designer in my first job. How I ended up as a Designer is another story. In short, Behance.net proved to be one of the pivotal factors.. I just love Behance (any designer there who doesn't? ). Once I found out what Behance.net actually was, I would explore hundreds of mesmerising projects everyday. The work that I used to check had a great influence on me. I wanted to produce same kind of work with same level of details as others had done. One type of work that I always wanted to do was personal identity *(or branding?)*. I wanted to establish my own personal brand that would distinguish myself from the others. Establishing a personality of my own would give me the power to design how others would perceive me. As they say personal branding is a great way to tell people who you are and what you do.</p>
+                <h5 class="font-dark font-secondary-bold font-content mt6">When</h5>
+                <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. This thing is like a whirlpool which appears without a warning. We keep on thinking like next iteration would be perfect but it never is. We constantly work on it until our focus and inspiration are drown into this whirlpool. We reach at that stage of apathy and fatigue where we start doubting ourselves and think things like - "What am I doing with my life?" (at least I do)But one of my mantras is *Fail early, Fail often*, which I found in the book *Change by Design* by *Tim Brown*, CEO at IDEO. The mantra is simple - fail early, learn from the failure, repeat until you succeed. This is what I have been trying to do from the start of this year. June 2016 and I have started shaping up my personal identity. Now, I do not care if something is perfect or not because I do not want to get drawn into the perfection whirlpool and lose all my enthusiasm.</p>
             </div>
         </div> 
       </div>
