Added view for behance project

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@ keywords: design, portfolio, development, designer
             </div>
           </div>
           <div class="large-4 medium-4 columns small-collapse">
-            <div class="portfolio-project-card vertical-rect mb2">
-            </div>
+            <a href="{{ site.url }}/projects/view-for-behance" class="heading">
+              <div class="portfolio-project-card vertical-rect behance-thumbnail mb2">
+              </div>
+            </a>
           </div>
         </div>
         <div class="row">
