Added thumbnail for xbox project

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ keywords: design, portfolio, development, designer
             </div>
             <div class="row">
               <div class="large-6 medium-6 small-12 columns left-collapse">
-                <div class="portfolio-project-card square mb2">
+                <div class="portfolio-project-card square xbox-thumbnail mb2">
                 </div>
               </div>
               <div class="large-6 medium-6 columns right-collapse">
