Added XBOX project page

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ keywords: design, portfolio, development, designer
             </div>
             <div class="row">
               <div class="large-6 medium-6 small-12 columns left-collapse">
-                <div class="portfolio-project-card square xbox-thumbnail mb2">
-                </div>
+                <a href="{{ site.url }}/projects/xbox" class="heading">
+                  <div class="portfolio-project-card square xbox-thumbnail mb2">
+                  </div>
+                </a>
               </div>
               <div class="large-6 medium-6 columns right-collapse">
                 <div class="portfolio-project-card square mb2">
