--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: View for Behance Project
-description: Behance on your Windows Phone
-permalink: '/projects/view-for-behance/'
+title: XBOX Project
+description: Re-thinking the XBOX experience on iPhone
+permalink: '/projects/xbox/'
 keywords: design, portfolio, development, designer
 ---
 
 <div class="row mt6">
   <div class="large-12 medium-12 small-12 columns mt6">
-    <h1 class="font-light f1 text-center">View for <span class="font-primary-color">Be</span>hance</h1>
-    <p class="text-center font-secondary">Behance on your Windows Phone</p>
+    <h1 class="font-light f1 text-center">XB<span class="font-primary-color">O</span>X</h1>
+    <p class="text-center font-secondary">Re-thinking the XBOX experience on iPhone</p>
   </div>
 </div>
 <section class="mt6">
@@ -41,9 +41,7 @@ keywords: design, portfolio, development, designer
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
                 <p class="text-justify font-dark lh-copy mt4">It was April 2014 and I was a Windows Phone user back then. I always found it cumbersome to browse Behance on my device. There was (is) no official app in the Store nor there were any good third party alternatives. Browsing Behance on Internet Explorer was not a good way either (It was slow, believe me). That’s when I decided to create an app for myself and for others like me. And after around 2–3 months of work, I was ready with my app <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="font-primary-color">View for Behance</a>. Below is the story behind this app.</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
-                <p class="text-justify font-dark lh-copy mt4">As already stated, browsing Behance seamlessly on Windows Phone was the problem. There was not a single app which could provide a native experience. Internet Explorer was all you could use to browse Behance, but it was a slow and frustrating experience.</p>
-                <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
-                <p class="text-justify font-dark lh-copy mt4">The goal was clear to me — Creating an app which would help users in their Behance browsing experience on Windows Phone. I started my research with competitive audit. Since there were no good third party alternatives in Windows Phone Store then, I tried Android Play Store and iOS App Store. There were some apps made using the official Behance API, but none of them were providing exclusive features to their users. Apart from the usual Behance experience, none of them was offering something truly unique which could enhance the user experience. I knew that all I wanted was to use Behance seamlessly on Windows Phone, but then I did not want to add another brick in the wall. If I am going to make an app, I am going to do it better by aiding the users in achieving their goals. Only then I can compete with other apps in the future. <br><br>I checked the official Behance API page to explore what is currently being offered. Almost everything you could do on Behance website like uploading a project, appreciating a project, following creatives, etc. was there in the API. (Although after a few days, the endpoint for login was nowhere to be found. When I asked the support, they said that they were transitioning to Adobe ID and I would have to use Adobe’s Creative SDK for implementing login. Unfortunately that SDK is only available for iOS, Android and Web). The only limit I could find was the number of API request calls which were 150 per hour against a user device (which I thought was a no big deal).</p>
+                <p class="text-justify font-dark lh-copy mt4">The official XBOX app on iOS app has many flaws. I bought the XBOX ONE in October last year. Apart from exploring each and every option in XBOX, I also thought of giving the iOS app a try. I downloaded the app, signed in and landed on my feed. There were too many options on the screen. If you wanted to check your profile and achievements, good luck for that. Maybe the MS guys were feeling lazy since the IA, Layout and Visual Design appeared like a Windows 10 Mobile app. People on a particular platform such as iOS are familiar with apps having designs somewhat according to the preset guidelines. They see and use the familiar design everyday in the default apps and apps that they have downloaded from the app store.<br><br>Most of the apps use Tabs in the bottom for organising the content in iOS but the XBOX app is using the infamous hamburger menu. The moment you tap on the Hamburger Menu you find a plethora of superfluous options just to confuse you to some more extent. Psychologically our short term memory can help us to remember 4-5 items at a time. So if you are using an iOS app even for the first couple of times, chances are high that you will roughly know ‘Where to find What’. That’s why Tabs feel far more better in organising content instead of hiding everything aimlessly in the Hamburger menu. Plus tabs are easier to access being at the bottom of the screens.</p>
             </div>
         </div> 
       </div>
